# nelder-mead

./: CMakeLists.txt  README.md  beale.cpp  booth.cpp  cosine.cpp  distance.cpp  example.cpp  nelder-mead-mine.h  nelder-mead-old.h  nelder-mead.h  rosenbrock.cpp  squared.cpp
